plugins {
    alias(libs.plugins.android.application)
    id 'com.google.gms.google-services'
    id 'com.google.firebase.crashlytics'
}

def localProps = new Properties()
def localPropsFile = rootProject.file("local.properties")
if (localPropsFile.exists()) {
    localProps.load(new FileInputStream(localPropsFile))
}

def apiKey = localProps.getProperty("OPENWEATHER_API_KEY", "")

android {
    namespace 'com.fekozma.wallpaperchanger'
    compileSdk 36

    defaultConfig {
        applicationId "com.fekozma.wallpaperchanger"
        minSdk 24
        targetSdk 36
        versionCode 4
        versionName "1.0.3"
        buildConfigField "String", "OPENWEATHER_API_KEY", "\"${apiKey}\""


        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    buildFeatures {
        viewBinding true
        buildConfig true
    }
}

dependencies {

    implementation libs.appcompat
    implementation libs.material
    implementation libs.constraintlayout
    implementation libs.navigation.fragment
    implementation libs.navigation.ui
    implementation libs.recyclerview
    implementation libs.work.runtime
    implementation libs.firebase.crashlytics
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
    implementation("androidx.recyclerview:recyclerview:1.3.2")
    implementation 'com.github.bumptech.glide:glide:4.16.0'
    implementation libs.flexbox
    implementation 'com.google.android.gms:play-services-location:21.3.0'
    implementation 'com.squareup.retrofit2:retrofit:2.11.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
    implementation 'cat.ereza:customactivityoncrash:2.4.0'
    implementation 'org.osmdroid:osmdroid-android:6.1.20'
    implementation "androidx.concurrent:concurrent-futures:1.3.0"

    implementation platform('com.google.firebase:firebase-bom:34.2.0')
    implementation 'com.google.firebase:firebase-analytics'
}